# PosAgent

./: .gitignore  CLAUDE.md  LICENSE  README.md  README_DEV.md  bug分析报告.md  config.py  main.py  pyproject.toml  requirements.txt  schema_analyzer_task.md  场景演示.md  需求文档.md
agent/: agent_loop.py  matching_engine.py  option_expander.py  orchestration.py  rule_engine.py  sandbox.py  schema_analyzer.py  template_preprocessor.py  token_classifier.py  tools.py  workflow.py
cli/: human_review.py  repl.py
data/: canonical_schema.py  mapping_rules.yaml  memory.py  token_dict.py
excel_io/: excel_reader.py  excel_writer.py
menupilot/: __init__.py  __main__.py  config.py  main.py  wizard.py
menupilot/agent/: agent_loop.py  conflict_resolver.py  context_mode.py  mapping_parser.py  matching_engine.py  option_expander.py  orchestration.py  rule_engine.py  sandbox.py  schema_analyzer.py  token_classifier.py  tools.py  workflow.py
menupilot/cli/: human_review.py  repl.py
menupilot/data/: canonical_schema.py  mapping_rules.yaml  memory.py
menupilot/excel_io/: excel_reader.py  excel_writer.py
testdata/: 报告.txt
testdata/firstresult/: pos1_test_details.json
testdata/睿食拓/: run_pos1_test.py
tests/: __init__.py  smoke_test_api.py  test_cli.py
tools/: apply_migration.py  diag_memory.py  migrate_state_access.py
