[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "MenuPilot"
version = "0.1.1"
description = "智能 POS 模板映射助手 — 自动将主数据 SOP 代码填入 POS 模板"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "yuan wu", email = "694904422@qq.com"},
]
requires-python = ">=3.9"
dependencies = [
    "openai>=2.0.0",
    "openpyxl>=3.1.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "rapidfuzz>=3.0.0",
    "langgraph>=1.2.0",
    "langchain>=1.3.0",
]
keywords = ["pos", "menu", "excel", "sop", "bubble-tea", "menu-pilot"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
urls = {Repository = "https://github.com/wyyyyy04/MenuPilot"}

[project.scripts]
menupilot = "menupilot.main:main"

[tool.setuptools.packages.find]
include = ["menupilot*"]

[tool.setuptools.package-data]
menupilot = ["data/*.yaml"]
